--- a/src/app.css
+++ b/src/app.css
@@ -26,8 +26,8 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  display: block;
+  place-items: initial;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -44,8 +44,8 @@ h1 {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 0rem;
+  text-align: justify;
 }
 
 button {
