--- a/src/app.css
+++ b/src/app.css
@@ -42,7 +42,8 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
+  min-width: 100%;
+  min-height: 100vh;
   margin: 0 auto;
   padding: 0rem;
   text-align: justify;
