--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,6 @@
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
-  line-height: 24px;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -24,59 +23,105 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+*, :after, :before {
+  box-sizing: border-box;
+}
+
+body, main, #app {
   margin: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;  
+}
+
+div.topbar {
+  display: flex;
+  overflow: hidden;
+  align-items: center;
+  color: white;
+  background: #334433;
+  height: 50px;
+  width: 100%;
+  padding: 0 15px;
+  position: relative;
+}
+
+div.topbar_elements {
+  display: flex;
+  height: 50px;
+  align-items: center;
+  -webkit-box-align: center;
+  margin: 0 10px;
+}
+
+div.wrapper {
   display: block;
-  place-items: initial;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background: #ffffcc;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+}  
+
+div.pane_root {
+  position: absolute;
+  top: 3px;
+  bottom: 3px;
+  left: 3px;
+  right: 3px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+div.pane_root > * {
+  box-sizing: border-box;
 }
 
-.card {
-  padding: 2em;
+div.pane {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  height: 100%;
 }
 
-#app {
-  min-width: 100%;
-  min-height: 100vh;
-  margin: 0 auto;
-  padding: 0rem;
-  text-align: justify;
+div.pane_topbar {
+  background: #eeeeee;
+  display: inline-flex;
+  justify-content: space-between;
+  flex-shrink: 0;
+  height: 30px;
+  cursor: move;
+  color: #222222;
+  padding: 10px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+div.pane_container {
+  position: relative;
+  display: block;
+  flex: 1;
+  height: 0;
+  overflow: hidden;
+  background: #ffddff;
+}
+
+div.pane_content {
+  height: 100%;
+  padding: 20px;
+  text-align: center;
+}
+
+div.pane_content > h1 {
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  font-weight: bold;
+  color: #222222;
+}
+
+button.closed {
+  background: transparent;
+  border: 0;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
