--- a/src/app.css
+++ b/src/app.css
@@ -125,3 +125,9 @@ button.closed {
   border: 0;
   cursor: pointer;
 }
+
+button.division{
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+}
