- svelte-dnd-zone 라이브러리 설치 및 적용 - Topbar 정상적으로 나오지 않는 부분 CSS 수정 - svelte-dnd-zone 라이브러리 적용에 따른 <section>태그 CSS 적용 - 창 드래그에 따른 미리보기 그림자 모양 사전 생성 및 적용 준비 - paneObject 구조 변경(ID 변수 추가)

--- a/src/app.css
+++ b/src/app.css
@@ -44,6 +44,7 @@ div.topbar {
   width: 100%;
   padding: 0 15px;
   position: relative;
+  z-index: 1000;
 }
 
 div.topbar_elements {
@@ -75,6 +76,14 @@ div.pane_root {
 
 div.pane_root > * {
   box-sizing: border-box;
+}
+
+section {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  height: 100%;
 }
 
 div.pane {
